# ot-deep-grey-box-model

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/conf/: default.yaml  knot_conf.yaml  submitit-slurm-options.yaml
src/conf/data_sampler/: advdiff_data_sampler.yaml  pendulum_data_sampler.yaml  reactdiff_data_sampler.yaml
src/conf/model/: advdiff_nnet.yaml  pendulum_nnet.yaml  reactdiff_nnet.yaml
src/data_loader/: __init__.py  config_data_loader.py  data_loader.py  reactdiff_dataset.py  simulator_dataset.py
src/evaluation/: evaluator.py
src/evaluation/advdiff/: bb_model_evaluation.ipynb  model_evaluation.ipynb
src/evaluation/pendulum/: model_evaluation.ipynb  model_evaluation_gb_inspect.ipynb
src/evaluation/reactdiff/: model_evaluation.ipynb
src/forward_models/: init_physics_model.py  utils.py
src/forward_models/advdiff/: __init__.py  adv_diff_sims_examples.ipynb  advdiff_model.py  advdiff_options.py  generate_data.py  make_dataset-one-to-one.sh  make_dataset.sh
src/forward_models/pendulum/: __init__.py  generate_data.py  options.py  pendulum_experiments.yaml  pendulum_model.py  pendulum_sims_examples.ipynb  simulate_from_conf.py  visualization.py
src/forward_models/reactdiff/: make_dataset.py  params.yaml  (+2 more)
src/io/: utils.py
src/metrics/: c2st_torch.py  mmd.py  mse.py  ot_loss.py
src/nnets/: __init__.py  convnet.py  lstmnet.py  mlp.py  resnet.py  unet_physics.py  utils.py  wandb_util.py
src/sampler/: distributions.py  loaders.py  simulator_sampler.py
src/train/: __hydra__launcher.py  utils.py
src/utils/: hash.py
(+19 files in other folders)
