[project]
requires-python = ">=3.9"
name = "ot-model-misspecification"
version = "0.1.0"

dependencies = [
    "black >=23.10.1",
    "build >= 0.9.0",
    "isort >=5.12.0",
    "matplotlib",  
    "numpy",
    "pytest",
    "setuptools >= 45",
    "torch",
    "wandb",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"
packages = ["src"]

[tool.black]
line-length = 79
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
)/
'''